# dinari-blockchain-hub

./: .env.example  CMakeLists.txt  CONSENSUS_HARDENING.md  Dockerfile  INSTALLATION_VERIFICATION.md  README.md  SECURITY_AUDIT_SUMMARY.md  TESTNET_STARTUP_GUIDE.md  docker-compose.yml  security_hardening_patch.cpp
azure/: container-deploy.yml  deploy.sh
config/: genesis.json  mainnet.conf  testnet.conf
docs/: COMPREHENSIVE_SECURITY_AUDIT_REPORT.md  DINARI_BLOCKCHAIN_WHITEPAPER.md  GENERATE_WHITEPAPER_PDF.md  POSTMAN_API_DOCUMENTATION.md  PRODUCTION_AUDIT.md  SECURITY_AUDIT.md  SECURITY_AUDIT_2024.md  SETUP_GUIDE.md
include/dinari/: constants.h  types.h  version.h
postman/: Dinari_Blockchain_API.postman_collection.json
src/: main.cpp
src/blockchain/: block.cpp  block.h  blockchain.cpp  blockchain.h  merkle.cpp  merkle.h
src/cli/: dinari-cli.cpp
src/consensus/: difficulty.cpp  difficulty.h  validation.cpp  validation.h
src/core/: mempool.cpp  mempool.h  script.cpp  script.h  transaction.cpp  transaction.h  utxo.cpp  utxo.h
src/crypto/: aes.cpp  aes.h  base58.cpp  base58.h  ecdsa.cpp  ecdsa.h  hash.cpp  hash.h
src/mining/: miner.cpp  miner.h
src/network/: addrman.cpp  addrman.h  message.cpp  message.h  netbase.cpp  netbase.h  node.cpp  node.h  peer.cpp  peer.h  protocol.cpp  protocol.h
src/rpc/: rpcblockchain.cpp  rpcblockchain.h  rpcserver.cpp  rpcserver.h  rpcwallet.cpp  rpcwallet.h
src/storage/: blockstore.cpp  blockstore.h  database.cpp  database.h  txindex.cpp  txindex.h
src/util/: config.cpp  config.h  logger.cpp  logger.h  security.cpp  security.h  serialize.cpp  serialize.h  time.cpp  time.h
src/wallet/: address.cpp  address.h  hdwallet.cpp  hdwallet.h  keystore.cpp  keystore.h  wallet.cpp  wallet.h
tests/: CMakeLists.txt  test_blockchain.cpp  test_consensus_fixes.cpp  test_crypto.cpp  test_framework.h
tests/unit/: test_hash.cpp
